fix for issue #13 - graceful overflow of names in applications menu

--- a/src/app/applications/applications-menu/applications-menu.component.scss
+++ b/src/app/applications/applications-menu/applications-menu.component.scss
@@ -33,6 +33,8 @@
 .mat-menu-item .cbp-applications-link {
     text-decoration: none;
     color: $gray-dark;
+    overflow: inherit;
+    text-overflow: inherit;
     &:hover,
     &:focus {
       text-decoration: underline;
